--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
